--- a/index_html_files/xr_text.css
+++ b/index_html_files/xr_text.css
@@ -16,13 +16,14 @@
 .xr_s14 {font-family:Times New Roman;font-weight:bold;font-style:normal;font-size:23px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
 .xr_s15 {font-family:Times New Roman;font-weight:normal;font-style:normal;font-size:23px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
 .xr_s16 {font-family:'Symbol';font-weight:normal;font-style:normal;font-size:23px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
-.xr_s17 {font-family:Times New Roman;font-weight:normal;font-style:normal;font-size:21px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
-.xr_s18 {font-size:21px;text-decoration:none;letter-spacing:0.0em;}
-.xr_s19 {font-family:'Symbol';font-weight:normal;font-style:normal;font-size:15px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
-.xr_s20 {font-family:Times New Roman;font-weight:bold;font-style:normal;font-size:21px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
-.xr_s21 {font-family:'Symbol';font-weight:normal;font-style:normal;font-size:16px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
-.xr_s22 {font-family:Times New Roman;font-weight:bold;font-style:normal;font-size:24px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
-.xr_s23 {font-family:Times New Roman;font-weight:normal;font-style:italic;font-size:24px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
-.xr_s24 {font-family:Times New Roman;font-weight:normal;font-style:normal;font-size:18px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
-.xr_s25 {font-family:Times New Roman;font-weight:bold;font-style:normal;font-size:18px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
-.xr_s26 {font-family:Times New Roman;font-weight:normal;font-style:normal;font-size:18px;text-decoration:underline;color:#0000FF;letter-spacing:0.0em;}
+.xr_s17 {font-family:Verdana, Geneva, sans-serif;font-weight:normal;font-style:normal;font-size:23px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
+.xr_s18 {font-family:Times New Roman;font-weight:normal;font-style:normal;font-size:21px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
+.xr_s19 {font-size:21px;text-decoration:none;letter-spacing:0.0em;}
+.xr_s20 {font-family:'Symbol';font-weight:normal;font-style:normal;font-size:15px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
+.xr_s21 {font-family:Times New Roman;font-weight:bold;font-style:normal;font-size:21px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
+.xr_s22 {font-family:'Symbol';font-weight:normal;font-style:normal;font-size:16px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
+.xr_s23 {font-family:Times New Roman;font-weight:bold;font-style:normal;font-size:24px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
+.xr_s24 {font-family:Times New Roman;font-weight:normal;font-style:italic;font-size:24px;text-decoration:none;color:#4B2D16;letter-spacing:0.0em;}
+.xr_s25 {font-family:Times New Roman;font-weight:normal;font-style:normal;font-size:18px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
+.xr_s26 {font-family:Times New Roman;font-weight:bold;font-style:normal;font-size:18px;text-decoration:none;color:#000000;letter-spacing:0.0em;}
+.xr_s27 {font-family:Times New Roman;font-weight:normal;font-style:normal;font-size:18px;text-decoration:underline;color:#0000FF;letter-spacing:0.0em;}
